--- a/about-this-blog/index.html
+++ b/about-this-blog/index.html
@@ -10,18 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/monokai.min.css">
+          href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/solid.css">
 
-    <link href="../static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -48,7 +48,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=".."/>
+<meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
 
@@ -59,12 +59,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="..">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
 
       <h1>
-        <a href="..">Dr Alex Ioannides</a>
+        <a href="https://alexioannides.github.io">Dr Alex Ioannides</a>
       </h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
@@ -75,13 +75,13 @@
 
               <li>
                 <a target="_self"
-                   href="../about-me/">
+                   href="https://alexioannides.github.io/about-me/">
                   About&nbsp;Me
                 </a>
               </li>
               <li>
                 <a target="_self"
-                   href="../about-this-blog/">
+                   href="https://alexioannides.github.io/about-this-blog/">
                   About this&nbsp;Blog
                 </a>
               </li>
@@ -117,7 +117,7 @@
   <main>
 
     <nav>
-      <a href="..">Home</a>
+      <a href="https://alexioannides.github.io">Home</a>
 
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
@@ -133,7 +133,7 @@
     <h1 id="about-this-blog">About this&nbsp;Blog</h1>
   </header>
   <div>
-<p>Although I am interested in <a href="../about-me/">many things</a>, this blog is focused on the disciplines of <em>data science</em> and <em>machine learning engineering and operations</em>. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into <em>information</em> that one could <em>do something with</em>, via tangible <em>end products</em> that deliver <em>value</em> to someone or something. As I see it, this covers the methods and tools used&nbsp;for:</p>
+<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of <em>data science</em> and <em>machine learning engineering and operations</em>. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into <em>information</em> that one could <em>do something with</em>, via tangible <em>end products</em> that deliver <em>value</em> to someone or something. As I see it, this covers the methods and tools used&nbsp;for:</p>
 <ul>
 <li>data ingestion and&nbsp;storage;</li>
 <li>data extraction and transformation (<span class="caps">ETL</span>);</li>
@@ -160,7 +160,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : "..",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
