changes to bodywork article and updates to about me page, etc

--- a/about-this-blog/index.html
+++ b/about-this-blog/index.html
@@ -133,7 +133,7 @@
     <h1 id="about-this-blog">About this&nbsp;Blog</h1>
   </header>
   <div>
-<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of <em>data science</em> and <em>machine learning engineering and operations</em>. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into <em>information</em> that one could <em>do something with</em>, via tangible <em>end products</em> that deliver <em>value</em> to someone or something. As I see it, this covers the methods and tools used&nbsp;for:</p>
+<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of <em>data science</em>,  <em>machine learning engineering and operations</em>. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into <em>information</em> that one could <em>do something with</em>, via tangible <em>end products</em> that deliver <em>value</em> to someone or something. As I see it, this covers the methods and tools used&nbsp;for:</p>
 <ul>
 <li>data ingestion and&nbsp;storage;</li>
 <li>data extraction and transformation (<span class="caps">ETL</span>);</li>
