--- a/about-me/index.html
+++ b/about-me/index.html
@@ -10,18 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+          href="../theme/pygments/monokai.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
 
-    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
+    <link href="../static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -48,7 +48,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://alexioannides.github.io"/>
+<meta property="og:url" content=".."/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
 
@@ -59,12 +59,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="https://alexioannides.github.io">
+      <a href="..">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
 
       <h1>
-        <a href="https://alexioannides.github.io">Dr Alex Ioannides</a>
+        <a href="..">Dr Alex Ioannides</a>
       </h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
@@ -75,17 +75,20 @@
 
               <li>
                 <a target="_self"
-                   href="https://alexioannides.github.io/about-me/">
+                   href="../about-me/">
                   About&nbsp;Me
                 </a>
               </li>
               <li>
                 <a target="_self"
-                   href="https://alexioannides.github.io/about-this-blog/">
+                   href="../about-this-blog/">
                   About this&nbsp;Blog
                 </a>
               </li>
 
+            <li>
+              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Notes & Demos</a>
+            </li>
         </ul>
       </nav>
 
@@ -117,7 +120,7 @@
   <main>
 
     <nav>
-      <a href="https://alexioannides.github.io">Home</a>
+      <a href="..">Home</a>
 
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
@@ -133,12 +136,13 @@
     <h1 id="about-me">About&nbsp;Me</h1>
   </header>
   <div>
-<p>I am one of the founders of <a href="https://www.bodyworkml.com">Bodywork Machine Learning</a>, where I focus on developing open-source tools and best-practices for <span class="caps">ML</span> engineers. We help <span class="caps">ML</span> teams to bridge the gap between research-led (proof-of-concept) solutions and fully-operational <span class="caps">ML</span> systems, creating a path to production that is fast, reliable and repeatable. Our key technology is <a href="https://bodywork.readthedocs.io/en/latest/">bodywork-core</a>, which is used to deploy jobs, services and pipelines, without requiring engineers to get involved in containerisation, orchestration and&nbsp;infrastructure.</p>
-<p>I have a background helping companies develop solutions to their data engineering and machine learning problems. I was Chief Data Officer for <a href="https://livemorecapital.com">LiveMore Capital</a>, where I built a data platform to support their credit analytics and modelling activities; I worked with Oracle’s <a href="https://www.oracle.com/applications/ai-apps/"><span class="caps">AI</span> Apps</a> team, automating workflows for training, deploying and monitoring <span class="caps">ML</span> models embedded throughout Oracle’s cloud apps; and prior to all this I worked for <a href="https://www.novafori.com">Nova Fori</a>, a FinTech scale-up and provider of <span class="caps">B2B</span> transactional platforms, where I was responsible for the research and development of trading algorithms and <span class="caps">ML</span> systems that enabled clients to derive value from trade-event&nbsp;data.</p>
-<p>Before moving into the world of data science and machine learning I spent several years working as a quantitative analyst within London’s financial services sector. I specialised in pricing and modelling the credit risk on derivative trades. So I know a thing or two about stochastic processes, time-series data, Monte Carlo methods and financial&nbsp;mathematics.</p>
-<p>Going back even further, I graduated from <a href="https://www.ucl.ac.uk/"><span class="caps">UCL</span></a> with a PhD in Computational Neuroscience, that explored how machine-vision techniques can be used to better understand human visual cognition. I learnt a lot about statistical learning and neural networks - before any of this stuff was as powerful and popular as it is today. I also have a background in theoretical&nbsp;physics.</p>
-<p>I am a competent software engineer, comfortable working with cloud-based distributed systems and I have had operational responsibility for many production services. I prefer to be hands-on, but I have also led cross-functional teams and managed technical projects from inception to&nbsp;delivery.</p>
-<p>When there’s spare time I <a href="https://www.strava.com/athletes/2026116">ride and race bicycles</a>, <a href="https://github.com/AlexIoannides">write code</a> (for fun!), drink <a href="https://www.hasbean.co.uk">good coffee</a> and listen to <a href="https://soundcloud.com/user-616657739/sets">house, techno and electronica</a> (with a soft-spot for <span class="caps">UK</span> rave from the early&nbsp;90s).</p>  </div>
+<p>I am a leader of <span class="caps">ML</span> engineering and data science teams who still likes to get his hands dirty solving data problems and writing code. I have many years of experience with a specialism in the development of tools, frameworks and platforms for scaling the deployment of data science throughout an&nbsp;organisation.</p>
+<p>I&#8217;m also one of the founders of <a href="https://www.bodyworkml.com">Bodywork Machine Learning</a>, where we&#8217;ve been developing open-source tools and best-practices for <span class="caps">ML</span> engineers. We&#8217;ve helped teams build <span class="caps">ML</span> systems using <a href="https://bodywork.readthedocs.io/en/latest/">bodywork-core</a> to deploy <span class="caps">ML</span> pipelines and models without requiring anyone to get involved in containerisation, orchestration and&nbsp;infrastructure.</p>
+<p>I&#8217;ve helped many companies large and small develop solutions to their data and <span class="caps">ML</span> problems: I&#8217;ve led a team of <span class="caps">ML</span> engineers at <a href="https://www.lloydsbankinggroup.com">Lloyds Banking Group</a>, developed a data platform to support the credit analytics and modelling activities of <a href="https://livemorecapital.com">LiveMore Capital</a>; worked with Oracle’s <a href="https://www.oracle.com/applications/ai-apps/"><span class="caps">AI</span> Apps</a> team, automating workflows for training, deploying and monitoring models; and prior to all this I worked for <a href="https://www.novafori.com">NovaFori</a>, a FinTech scale-up and provider of <span class="caps">B2B</span> transactional platforms, where I was responsible for the research and development of trading algorithms and <span class="caps">ML</span> systems that enabled clients to derive value from trade-event&nbsp;data.</p>
+<p>Before moving into the world of data science and <span class="caps">ML</span>, I spent seven years working as a financial mathematician, pricing and modelling the credit risk on derivative trades. So I know a thing or two about time-series data, Monte Carlo methods, stochastic processes and&nbsp;Black-Scholes.</p>
+<p>Going back even further, I graduated from <a href="https://www.ucl.ac.uk/"><span class="caps">UCL</span></a> with a PhD in Computational Neuroscience that explored how computer vision models can further our understanding of human visual cognition. I learnt a lot about statistical learning and neural networks - before any of this stuff was as powerful and popular as it is today. This came after degrees in systems biology and theoretical&nbsp;physics.</p>
+<p>I&#8217;m an experienced software engineer who&#8217;s comfortable with Agile ways-of-working, modern DevOps practices and cloud-based distributed systems. I have had operational responsibility for many production services throughout my&nbsp;career.</p>
+<p>When there’s spare time I <a href="https://www.strava.com/athletes/2026116">ride and race bicycles</a>, <a href="https://github.com/AlexIoannides">write code</a> (for fun!), drink <a href="https://www.hasbean.co.uk">good coffee</a> and listen to <a href="https://soundcloud.com/user-616657739/sets">house, techno and electronica</a>.</p>  </div>
 </article>
 
     <footer>
@@ -156,7 +160,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : "https://alexioannides.github.io",
+  "url" : "..",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
