latest changes to alexioannides.github.io

--- a/authors.html
+++ b/authors.html
@@ -85,7 +85,7 @@
               </li>
 
             <li>
-              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Notes & Demos</a>
+              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Study Notes & Demos</a>
             </li>
         </ul>
       </nav>
@@ -134,7 +134,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="./author/dr-alex-ioannides.html">Dr Alex Ioannides</a> (13)</li>
+      <li><a href="./author/dr-alex-ioannides.html">Dr Alex Ioannides</a> (15)</li>
     </ul>
   </div>
 </article>
