--- a/tags.html
+++ b/tags.html
@@ -85,7 +85,7 @@
               </li>
 
             <li>
-              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Notes & Demos</a>
+              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Study Notes & Demos</a>
             </li>
         </ul>
       </nav>
@@ -135,18 +135,18 @@
   <div>
     <ul class="list">          <li><a href="./tag/apache-spark.html">apache-spark</a> (3)</li>
           <li><a href="./tag/aws.html">AWS</a> (5)</li>
-          <li><a href="./tag/bodywork.html">bodywork</a> (1)</li>
+          <li><a href="./tag/bodywork.html">bodywork</a> (3)</li>
           <li><a href="./tag/data-engineering.html">data-engineering</a> (1)</li>
           <li><a href="./tag/data-processing.html">data-processing</a> (8)</li>
           <li><a href="./tag/data-stores.html">data-stores</a> (1)</li>
           <li><a href="./tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
-          <li><a href="./tag/kubernetes.html">kubernetes</a> (2)</li>
-          <li><a href="./tag/machine-learning.html">machine-learning</a> (4)</li>
+          <li><a href="./tag/kubernetes.html">kubernetes</a> (4)</li>
+          <li><a href="./tag/machine-learning.html">machine-learning</a> (6)</li>
           <li><a href="./tag/machine-learning-operations.html">machine-learning-operations</a> (1)</li>
-          <li><a href="./tag/mlops.html">mlops</a> (1)</li>
+          <li><a href="./tag/mlops.html">mlops</a> (3)</li>
           <li><a href="./tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
           <li><a href="./tag/pymc3.html">pymc3</a> (2)</li>
-          <li><a href="./tag/python.html">python</a> (5)</li>
+          <li><a href="./tag/python.html">python</a> (7)</li>
           <li><a href="./tag/quant-finance.html">quant-finance</a> (1)</li>
           <li><a href="./tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
     </ul>
