--- a/categories.html
+++ b/categories.html
@@ -85,7 +85,7 @@
               </li>
 
             <li>
-              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Notes & Demos</a>
+              <a target="_self" href="https://alexioannides.com/data-science-and-ml-notebook/" >ML Study Notes & Demos</a>
             </li>
         </ul>
       </nav>
@@ -141,7 +141,7 @@
         <a href="./category/data-science.html">data-science</a> (6)
       </li>
       <li>
-        <a href="./category/machine-learning-engineering.html">machine-learning-engineering</a> (2)
+        <a href="./category/machine-learning-engineering.html">machine-learning-engineering</a> (4)
       </li>
       <li>
         <a href="./category/r.html">r</a> (4)
