latest changes to alexioannides.github.io

--- a/tags.html
+++ b/tags.html
@@ -10,18 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/monokai.min.css">
+          href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/solid.css">
 
-    <link href="./static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -48,7 +48,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="."/>
+<meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Dr Alex Ioannides &ndash; Tags</title>
@@ -57,12 +57,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href=".">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
 
       <h1>
-        <a href=".">Dr Alex Ioannides</a>
+        <a href="https://alexioannides.github.io">Dr Alex Ioannides</a>
       </h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
@@ -73,13 +73,13 @@
 
               <li>
                 <a target="_self"
-                   href="./about-me/">
+                   href="https://alexioannides.github.io/about-me/">
                   About&nbsp;Me
                 </a>
               </li>
               <li>
                 <a target="_self"
-                   href="./about-this-blog/">
+                   href="https://alexioannides.github.io/about-this-blog/">
                   About this&nbsp;Blog
                 </a>
               </li>
@@ -118,7 +118,7 @@
   <main>
 
     <nav>
-      <a href=".">Home</a>
+      <a href="https://alexioannides.github.io">Home</a>
 
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
@@ -133,22 +133,22 @@
     <h1 id="tags">Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/apache-spark.html">apache-spark</a> (3)</li>
-          <li><a href="./tag/aws.html">AWS</a> (5)</li>
-          <li><a href="./tag/bodywork.html">bodywork</a> (3)</li>
-          <li><a href="./tag/data-engineering.html">data-engineering</a> (1)</li>
-          <li><a href="./tag/data-processing.html">data-processing</a> (8)</li>
-          <li><a href="./tag/data-stores.html">data-stores</a> (1)</li>
-          <li><a href="./tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
-          <li><a href="./tag/kubernetes.html">kubernetes</a> (4)</li>
-          <li><a href="./tag/machine-learning.html">machine-learning</a> (6)</li>
-          <li><a href="./tag/machine-learning-operations.html">machine-learning-operations</a> (1)</li>
-          <li><a href="./tag/mlops.html">mlops</a> (3)</li>
-          <li><a href="./tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
-          <li><a href="./tag/pymc3.html">pymc3</a> (2)</li>
-          <li><a href="./tag/python.html">python</a> (7)</li>
-          <li><a href="./tag/quant-finance.html">quant-finance</a> (1)</li>
-          <li><a href="./tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
+    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/apache-spark.html">apache-spark</a> (3)</li>
+          <li><a href="https://alexioannides.github.io/tag/aws.html">AWS</a> (5)</li>
+          <li><a href="https://alexioannides.github.io/tag/bodywork.html">bodywork</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/data-engineering.html">data-engineering</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/data-processing.html">data-processing</a> (8)</li>
+          <li><a href="https://alexioannides.github.io/tag/data-stores.html">data-stores</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/kubernetes.html">kubernetes</a> (3)</li>
+          <li><a href="https://alexioannides.github.io/tag/machine-learning.html">machine-learning</a> (5)</li>
+          <li><a href="https://alexioannides.github.io/tag/machine-learning-operations.html">machine-learning-operations</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/mlops.html">mlops</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/pymc3.html">pymc3</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (6)</li>
+          <li><a href="https://alexioannides.github.io/tag/quant-finance.html">quant-finance</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -168,7 +168,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : ".",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
