--- a/about-me/index.html
+++ b/about-me/index.html
@@ -10,18 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/monokai.min.css">
+          href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/solid.css">
 
-    <link href="../static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -48,7 +48,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=".."/>
+<meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
 
@@ -59,12 +59,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="..">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
 
       <h1>
-        <a href="..">Dr Alex Ioannides</a>
+        <a href="https://alexioannides.github.io">Dr Alex Ioannides</a>
       </h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
@@ -75,13 +75,13 @@
 
               <li>
                 <a target="_self"
-                   href="../about-me/">
+                   href="https://alexioannides.github.io/about-me/">
                   About&nbsp;Me
                 </a>
               </li>
               <li>
                 <a target="_self"
-                   href="../about-this-blog/">
+                   href="https://alexioannides.github.io/about-this-blog/">
                   About this&nbsp;Blog
                 </a>
               </li>
@@ -120,7 +120,7 @@
   <main>
 
     <nav>
-      <a href="..">Home</a>
+      <a href="https://alexioannides.github.io">Home</a>
 
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
@@ -137,8 +137,7 @@
   </header>
   <div>
 <p>I lead <span class="caps">AI</span>/<span class="caps">ML</span> engineering teams, preferring to remain actively engaged in all aspects of technical delivery. I&#8217;ve helped develop several <span class="caps">ML</span> systems, as well as tools, frameworks and platforms to accelerate and scale deployments. You can find examples of all this on this blog and on <a href="https://github.com/AlexIoannides">GitHub</a>.</p>
-<p>I&#8217;m a seasoned software engineer and a recovering financial mathematician whose academic journey includes a PhD in Computational Neuroscience from <span class="caps">UCL</span>, where I investigated the intersection of computer vision and human visual&nbsp;cognition.</p>
-<p>When I&#8217;m not behind a screen I like to race mountain bikes, play computer games and help my son with his coding projects. And I&#8217;m partial to the odd&nbsp;rave&#8230;</p>  </div>
+<p>I&#8217;m a seasoned software engineer and a recovering financial mathematician whose academic journey includes a PhD in Computational Neuroscience from <span class="caps">UCL</span>, where I investigated the intersection of computer vision and human visual&nbsp;cognition.</p>  </div>
 </article>
 
     <footer>
@@ -156,7 +155,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : "..",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
