latest changes to alexioannides.github.io

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -136,8 +136,8 @@
     <h1 id="about-me">About&nbsp;Me</h1>
   </header>
   <div>
-<p>I lead <span class="caps">AI</span>/<span class="caps">ML</span> engineering teams, preferring to remain actively engaged in all aspects of technical delivery. I&#8217;ve helped develop several <span class="caps">ML</span> systems, as well as tools, frameworks and platforms to accelerate and scale deployments. You can find examples of all this on this blog and on <a href="https://github.com/AlexIoannides">GitHub</a>.</p>
-<p>I&#8217;m a seasoned software engineer and a recovering financial mathematician whose academic journey includes a PhD in Computational Neuroscience from <span class="caps">UCL</span>, where I investigated the intersection of computer vision and human visual&nbsp;cognition.</p>  </div>
+<p>I lead <span class="caps">AI</span>/<span class="caps">ML</span> engineering teams and like to keep my hands dirty shipping code with everyone else. I&#8217;ve helped develop several <span class="caps">ML</span> systems, as well as the tools, frameworks and platforms that support them. You can find examples of all this on this blog and on <a href="https://github.com/AlexIoannides">GitHub</a>.</p>
+<p>I&#8217;m a seasoned software engineer and a former financial mathematician whose academic journey includes a PhD in Computational Neuroscience from <span class="caps">UCL</span>, where I investigated the intersection of computer vision and human visual&nbsp;cognition.</p>  </div>
 </article>
 
     <footer>
